--- a/ethminer/CMakeLists.txt
+++ b/ethminer/CMakeLists.txt
@@ -5,7 +5,10 @@ aux_source_directory(. SRC_LIST)
 
 include_directories(BEFORE ..)
 include_directories(${Boost_INCLUDE_DIRS})
+if (JSONRPC)
+include_directories(BEFORE ${JSONCPP_INCLUDE_DIRS})
 include_directories(${JSON_RPC_CPP_INCLUDE_DIRS})
+endif()
 
 set(EXECUTABLE ethminer)
 
@@ -19,10 +22,6 @@ target_link_libraries(${EXECUTABLE} ${Boost_REGEX_LIBRARIES})
 
 if (JSONRPC)
 	target_link_libraries(${EXECUTABLE} ${JSON_RPC_CPP_CLIENT_LIBRARIES})
-	target_link_libraries(${EXECUTABLE} ${CURL_LIBRARIES})
-	if (DEFINED WIN32 AND NOT DEFINED CMAKE_COMPILER_IS_MINGW)
-		eth_copy_dlls(${EXECUTABLE} CURL_DLLS)
-	endif()
 endif()
 
 target_link_libraries(${EXECUTABLE} ethcore)
